samples/_failures_safe/1761213722_0797fb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_018a109c.c: In function ‘main’:
./samples/SAFE/__tmp_018a109c.c:164:13: error: expected declaration or statement at end of input
  164 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_018a109c.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_018a109c.c:164:13: error: expected declaration or statement at end of input
